# norm-supervised-highway

./: .gitignore  README.md  analysis-normalized.py  analysis.py  experiment_run.py  metrics.py  norms.py  pyproject.toml  requirements.txt  results.txt  run.py  speeding_test.py  supervisor.py  switching_test.py  tailgating_test.py  train.py
analysis/: details.md  details_2L5V_2L5V.md  details_2L5V_4L20V.md  summary.md  summary_2L5V_2L5V.md  summary_2L5V_4L20V.md
analysis/old/: comparison_filtered_default.eps
analysis_few_constraints/: details.md  summary.md
configs/: default.json
configs/environment/: 2_lanes_5_vehicles.json  4_lanes_20_vehicles.json  6_lanes_50_vehicles.json  default.json  long_survival.json  run.json  train_30_duration_2_lanes_5_vehicles.json  train_30_duration_4_lanes_20_vehicles.json
configs/training/: default.json
highway_dqn/DQN_1/: events.out.tfevents.1744039400.MSI.7237.0
highway_dqn/DQN_3/: events.out.tfevents.1744331121.MSI.3017.0
norm_supervisor/: __init__.py  consts.py  metrics.py  supervisor.py
old/: analysis.py  speeding_test.py  switching_test.py  tailgating_test.py
results/: 2L5V_2L5V.txt  2L5V_2L5V_latest.txt  2L5V_2L5V_updated.txt  2L5V_4L20V.txt  2_in_2_normalized.txt  2_in_4.txt  2_in_4_normalized.txt  2_in_speeding.txt  2_in_switching.txt  4L20V_2L5V.txt  4L20V_4L20V.txt  4_in_2_normalized.txt  4_in_4.txt  4_in_switching.txt  new_argmax_sup_2L5V_in_2L5V.txt  new_argmax_sup_2L5V_in_4L20V.txt  new_sampling_sup_2L5V_in_4L20V.txt  new_sup_2L5V_in_2L5V.txt
scripts/: analyze_results.py  debug_collision.py  experiment_run.py  run_experiments.sh  test.py  train.py
(+337 files in other folders)
