[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "norm-supervisor"
version = "0.1.0"
description = "Normative supervision implemented for the HighwayEnv driving environment."
authors = [
    {name = "Thomas Howell", email = "thomas.howell@tufts.edu"},
    {name = "Robert McPherson", email = "robert.mcpherson@tufts.edu"},
    {name = "Phi Bui", email = "philip.bui@tufts.edu"},
    {name = "Yuqi Ye", email = "yuqi.ye@tufts.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gymnasium>=1.0.0",
  "highway-env>=1.10.1",
  "numpy>=2.2.4",
  "pandas>=2.0.0",
  "scipy>=1.10.0",
  "stable-baselines3>=2.6.0",
  "torch>=2.7.1",
]
